Intro. Validation for other types of input.

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -21,7 +21,7 @@ input {
 }
 
 /* Mark input boxes that gets an error on validation: */
-input.invalid {
+.invalid {
   background-color: #ffdddd;
 }
 
@@ -36,4 +36,8 @@ input.invalid {
 
 .steps {
   min-width: 30em;
+}
+
+label {
+  display: block;
 }
