--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -6,38 +6,99 @@
 }
 
 #regForm {
-  background-color: #ffffff;
-  padding: 40px;
-  min-width: 300px;
+  min-width: 25%;
 }
 
-/* Style the input fields */
 input {
   padding: 10px;
   width: 100%;
   font-size: 17px;
-  font-family: Raleway;
-  border: 1px solid #aaaaaa;
+  border: 1px solid #BCD8DB;
 }
 
-/* Mark input boxes that gets an error on validation: */
-.invalid {
-  background-color: #ffdddd;
+.error {
+  border: red solid 2px;
 }
 
-/* Hide all steps by default: */
 .tab {
   display: none;
 }
 
-/* Make circles that indicate the steps of the form: */
 .step {
 }
 
 .steps {
-  min-width: 30em;
+  min-width: 50%;
 }
 
-label {
+/*label {
   display: block;
+}*/
+
+.card-header {
+  font-size: 2.0rem !important;
+  color: #F35B1C;
+  margin-bottom: 1rem;
+  line-height: 2.8rem;
+  display: block;
+  margin-left: 1rem;
+}
+
+p {
+  color: #512B2B;
+  font-size: 16px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+li::before {
+  content: "";
+  display: inline-block;
+  background: #5B8AD6;
+  border-radius: 0 12px 12px 0;
+  margin-inline-end: 1ch;
+  width: 8px;
+  height: 14px;
+}
+
+p.disclaimer {
+  color: #A38B80;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+#title {
+  font-size: 2.0rem;
+  line-height: 2.5rem;
+}
+
+.p-2-0 {
+  padding: 2.0rem;
+}
+
+.btn-next {
+  color: white;
+  background-color: #EE7023;
+  border: 1px solid #F35B1C;
+}
+
+.btn-prev {
+  color: #663333;
+  background-color: #D4B8A3;
+  border: 1px solid #D4B8A3;
+}
+
+.btn-next:hover, .btn-next:focus {
+  background-color: #F35B1C;
+}
+
+.btn-prev:hover, .btn-prev:focus {
+  color: #89898C;
 }
