--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -102,3 +102,27 @@ p.disclaimer {
 .btn-prev:hover, .btn-prev:focus {
   color: #89898C;
 }
+
+@media (max-width: 600px) {
+  br {
+    display: none;
+  }
+}
+
+@media (pointer: coarse), (hover: none) {
+  [title] {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+  }
+  [title]:focus::after {
+    content: attr(title);
+    position: absolute;
+    top: 90%;
+    color: #000;
+    background-color: #fff;
+    border: 1px solid;
+    width: fit-content;
+    padding: 3px;
+  }
+}
