--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -13,7 +13,7 @@ input {
   padding: 10px;
   width: 100%;
   font-size: 17px;
-  border: 1px solid #BCD8DB;
+  border: 1px solid #BCD8DB !important;
 }
 
 .tab {
@@ -26,10 +26,6 @@ input {
 .steps {
   min-width: 50%;
 }
-
-/*label {
-  display: block;
-}*/
 
 .card-header {
   font-size: 2.0rem !important;
@@ -99,30 +95,20 @@ p.disclaimer {
   color: #89898C;
 }
 
-.btn-next::after {
+.btn-after-waves::after {
   content: "\2009\00bb";
+}
+
+.overflow-auto {
+  overflow:auto;
+}
+
+.float-left {
+  float: left;
 }
 
 @media (max-width: 600px) {
   br {
     display: none;
-  }
-}
-
-@media (pointer: coarse), (hover: none) {
-  [title] {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-  }
-  [title]:focus::after {
-    content: attr(title);
-    position: absolute;
-    top: 90%;
-    color: #000;
-    background-color: #fff;
-    border: 1px solid;
-    width: fit-content;
-    padding: 3px;
   }
 }
